# todo-c

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  pt-br.json
common/: CMakeLists.txt  common.c  common.h
include/: action.h  action_args.h  action_handler.h  action_manager.h  application.h  command.h  definitions.h  display_base.h  menu.h  prompt.h  reader_base.h  style.h  task.h  task_manager.h  translate.h
src/: action_manager.c  application.c  main.c  menu.c  prompt.c  style.c  task.c  task_manager.c  translate.c
